cambio en ancho container index

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,12 +17,14 @@ body {
   text-align: center;
   line-height: 3rem;
 }
+
 @media (max-width: 828px) {
   .g-tituloPrincipal {
     margin-top: 44px;
     font-size: 36px;
   }
 }
+
 @media (max-width: 551px) {
   .g-tituloPrincipal {
     font-size: 32px;
@@ -33,6 +35,7 @@ body {
   font-size: 45px;
   font-family: "Playfair Display", serif;
 }
+
 @media (max-width: 828px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -44,6 +47,7 @@ body {
   font-family: "Playfair Display", serif;
   font-weight: 700;
 }
+
 @media (max-width: 828px) {
   .g-tituloCards {
     font-size: 24px;
@@ -113,6 +117,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
 .g-coordinemos-container > * {
   margin: 15px 0;
 }
@@ -121,15 +126,17 @@ body {
   width: 100%;
   background: #F2ECDE;
 }
+
 .g-contacto :first-child {
   margin: 100px 0 11px 0;
 }
+
 .g-contacto :last-child {
   margin: 35px 0 120px 0;
 }
 
 /**Mixins y extends**/
-#p-nosotros #nosotros, #p-servicios #renovar, #p-servicios #arquitecturaGeneral, #p-servicios #principalServicios, #proyectos, #introProyectos, .g-contacto {
+.g-contacto, #introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-nosotros #nosotros {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -151,6 +158,7 @@ nav {
   background-color: #ffffff;
   top: 0;
 }
+
 nav .cajaNav {
   font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
@@ -165,6 +173,7 @@ nav .cajaNav {
           box-shadow: 4px 4px whitesmoke;
   border-bottom: 1px solid #dadada;
 }
+
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
   display: -webkit-box;
@@ -182,6 +191,7 @@ nav .cajaNav .barNav {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
+
 nav .cajaNav .barNav li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -192,14 +202,17 @@ nav .cajaNav .barNav li {
   padding: 0 20px;
   height: 100%;
 }
+
 nav .cajaNav .barNav li:hover {
   cursor: pointer;
 }
+
 nav .cajaNav .barNav li a {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
+
 nav .cajaNav .titNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -214,13 +227,16 @@ nav .cajaNav .titNav {
   height: auto;
   width: 348px;
 }
+
 nav .cajaNav .titNav .toggle {
   display: none;
 }
+
 nav .cajaNav .titNav img {
   width: 110px;
   height: auto;
 }
+
 nav .cajaNav .botones {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -233,16 +249,20 @@ nav .cajaNav .botones {
           align-items: center;
   width: 340px;
 }
+
 nav .cajaNav .botones a {
   text-decoration: none;
   margin: 0 40px 0 0;
 }
+
 nav .cajaNav .toggle {
   display: none;
 }
+
 nav .navB {
   display: none;
 }
+
 @media (max-width: 828px) {
   nav {
     display: -webkit-box;
@@ -364,22 +384,26 @@ nav .navB {
           justify-content: center;
   text-align: center;
 }
+
 #p-index #landing p {
   padding: 10px;
   margin: 20px 0;
   font-size: 18px;
 }
+
 @media (max-width: 828px) {
   #p-index #landing p {
     font-size: 16px;
   }
 }
+
 #p-index #landing img {
   margin: 20px 0;
   width: 100%;
   max-width: 1040px;
   height: auto;
 }
+
 #p-index #p-videos {
   background-color: #F2ECDE;
   height: auto;
@@ -398,21 +422,25 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos {
     padding: 2rem 1rem;
   }
 }
+
 #p-index #p-videos h2 {
   text-align: center;
   margin-bottom: 2rem;
   padding: 0 20%;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos h2 {
     padding: 0;
   }
 }
+
 #p-index #p-videos .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -425,8 +453,9 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
   margin: 1rem 0;
-  max-width: 1000px;
+  max-width: 800px;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos .container {
     -webkit-box-orient: vertical;
@@ -436,29 +465,35 @@ nav .navB {
     padding: 0;
   }
 }
+
 @media (max-width: 551px) {
   #p-index #p-videos .container .img-new {
     width: 300px;
     height: auto;
   }
 }
+
 #p-index #p-videos .top .img-new {
   margin-right: 1rem;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos .top .img-new {
     margin: 0;
   }
 }
+
 #p-index #p-videos .top p {
   margin-left: 1rem;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos .top p {
     margin: 0;
     margin-top: 1rem;
   }
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos .bottom {
     -webkit-box-orient: vertical;
@@ -467,23 +502,28 @@ nav .navB {
             flex-direction: column-reverse;
   }
 }
+
 #p-index #p-videos .bottom .img-new {
   margin-left: 1rem;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos .bottom .img-new {
     margin: 0;
   }
 }
+
 #p-index #p-videos .bottom p {
   margin-right: 1rem;
 }
+
 @media (max-width: 828px) {
   #p-index #p-videos .bottom p {
     margin: 0;
     margin-top: 1rem;
   }
 }
+
 #p-index #p-contactanos {
   background-color: #F2ECDE;
   display: -webkit-box;
@@ -501,11 +541,13 @@ nav .navB {
           justify-content: center;
   padding: 3rem 0;
 }
+
 @media (max-width: 828px) {
   #p-index #p-contactanos h2 {
     font-size: 36px;
   }
 }
+
 #p-index #p-contactanos .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -514,6 +556,7 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
+
 @media (max-width: 551px) {
   #p-index #p-contactanos .container {
     -webkit-box-orient: vertical;
@@ -522,34 +565,41 @@ nav .navB {
             flex-direction: column;
   }
 }
+
 #p-index #p-contactanos .container .logo {
   width: 50%;
   height: auto;
   margin-right: 1.5rem;
 }
+
 @media (max-width: 551px) {
   #p-index #p-contactanos .container .logo {
     display: none;
   }
 }
+
 #p-index #p-contactanos .container .datos {
   margin-left: 1.5rem;
 }
+
 @media (max-width: 551px) {
   #p-index #p-contactanos .container .datos {
     margin: 1rem 0 0 0;
     text-align: center;
   }
 }
+
 #p-index #p-contactanos .container .datos h4 {
   font-size: 32px;
   font-family: "Playfair Display", serif;
 }
+
 @media (max-width: 828px) {
   #p-index #p-contactanos .container .datos h4 {
     font-size: 24px;
   }
 }
+
 #p-index #p-contactanos .container .datos .iconos .linea {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -559,6 +609,7 @@ nav .navB {
           align-items: center;
   margin-top: 2rem;
 }
+
 #p-index #p-contactanos .container .datos .iconos .linea p {
   margin-left: 1rem;
 }
@@ -567,12 +618,15 @@ nav .navB {
 #introProyectos {
   padding-bottom: 2rem;
 }
+
 #introProyectos h2 {
   margin: 31px 0 60px 0;
 }
+
 #introProyectos p {
   margin: 20px;
 }
+
 #introProyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -584,6 +638,7 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
+
 #introProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -598,18 +653,21 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
+
 #introProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
+
 @media (max-width: 1052px) {
   #introProyectos .contenedorCards .cards {
     max-width: 256px;
     font-size: 16px;
   }
 }
+
 @media (max-width: 828px) {
   #introProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -622,6 +680,7 @@ nav .navB {
     max-width: 256px;
   }
 }
+
 @media (max-width: 551px) {
   #introProyectos .contenedorCards {
     display: -webkit-box;
@@ -636,18 +695,22 @@ nav .navB {
     max-width: 328px;
   }
 }
+
 #introProyectos .contenedorCards h5 {
   margin-top: 20px;
 }
+
 #introProyectos .contenedorCards .card1 {
   margin-top: 192px;
 }
+
 #introProyectos .contenedorCards .card3 {
   margin-top: 120px;
 }
+
 @media (max-width: 827px) {
   #introProyectos .contenedorCards .card1,
-#introProyectos .contenedorCards .card3 {
+  #introProyectos .contenedorCards .card3 {
     margin-top: 0;
   }
 }
@@ -656,23 +719,28 @@ nav .navB {
 #proyectos h1 {
   margin-bottom: 48px;
 }
+
 #proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
   font-size: 18px;
 }
+
 @media (max-width: 828px) {
   #proyectos p {
     font-size: 16px;
   }
 }
+
 #proyectos a {
   text-decoration: none;
   color: #000;
 }
+
 #proyectos a:visited {
   color: #000;
 }
+
 #proyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -690,6 +758,7 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
 #proyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -704,18 +773,21 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
+
 #proyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
+
 @media (max-width: 1052px) {
   #proyectos .contenedorCards .cards {
     max-width: 256px;
     font-size: 16px;
   }
 }
+
 @media (max-width: 828px) {
   #proyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -728,6 +800,7 @@ nav .navB {
     max-width: 256px;
   }
 }
+
 @media (max-width: 551px) {
   #proyectos .contenedorCards {
     display: -webkit-box;
@@ -742,26 +815,32 @@ nav .navB {
     max-width: 328px;
   }
 }
+
 #proyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
+
 #proyectos .contenedorCards .card5 {
   margin-top: -70px;
 }
+
 #proyectos .contenedorCards .card1,
 #proyectos .contenedorCards .card4 {
   margin-top: 106px;
 }
+
 #proyectos .contenedorCards .card3,
 #proyectos .contenedorCards .card6 {
   margin-top: 42px;
 }
+
 #proyectos .contenedorCards .underline {
   font-size: 18px;
   font-weight: 400;
   color: #3FAF67;
   text-decoration: underline;
 }
+
 @media (max-width: 827px) {
   #proyectos .contenedorCards .cards {
     margin-top: 0;
@@ -772,6 +851,7 @@ nav .navB {
 #p-servicios #principalServicios h1 {
   margin-bottom: 28px;
 }
+
 #p-servicios #principalServicios img {
   width: 100%;
   height: auto;
@@ -780,18 +860,22 @@ nav .navB {
   max-height: 424px;
   margin: 30px 0 67px 0;
 }
+
 #p-servicios #principalServicios .textBox {
   max-width: 650px;
   margin-top: 25px;
 }
+
 #p-servicios #principalServicios p {
   font-size: 18px;
 }
+
 @media (max-width: 828px) {
   #p-servicios #principalServicios p {
     font-size: 16px;
   }
 }
+
 #p-servicios #principalServicios .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -804,6 +888,7 @@ nav .navB {
       flex-wrap: nowrap;
   padding-bottom: 50px;
 }
+
 #p-servicios #principalServicios .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -818,18 +903,21 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
+
 #p-servicios #principalServicios .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
+
 @media (max-width: 1052px) {
   #p-servicios #principalServicios .contenedorCards .cards {
     max-width: 190px;
     font-size: 16px;
   }
 }
+
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards {
     -webkit-box-pack: center;
@@ -842,6 +930,7 @@ nav .navB {
     max-width: 256px;
   }
 }
+
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards {
     display: -webkit-box;
@@ -856,27 +945,33 @@ nav .navB {
     max-width: 328px;
   }
 }
+
 #p-servicios #principalServicios .contenedorCards .segundoContenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .cardImg {
   margin-bottom: 21px;
 }
+
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2,
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
   margin-top: 160px;
 }
+
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2,
-#p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
+  #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
     margin-top: 0;
   }
 }
+
 #p-servicios #principalServicios .contenedorCards .segundoContenedor h3 {
   margin-bottom: 8px;
 }
+
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor {
     -webkit-box-orient: vertical;
@@ -885,13 +980,16 @@ nav .navB {
             flex-direction: column;
   }
 }
+
 #p-servicios #arquitecturaGeneral {
   background-color: #F2ECDE;
   padding: 60px;
 }
+
 #p-servicios #arquitecturaGeneral h2 {
   margin-bottom: 56px;
 }
+
 #p-servicios #arquitecturaGeneral .contenedorArquitectura {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -901,28 +999,33 @@ nav .navB {
           align-items: center;
   text-align: start;
 }
+
 #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
   width: 100%;
   height: auto;
   max-width: 508px;
   margin-right: 10px;
 }
+
 #p-servicios #arquitecturaGeneral .contenedorArquitectura p {
   width: 100%;
   height: auto;
   max-width: 508px;
   font-size: 16px;
 }
+
 @media (max-width: 1052px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 400px;
   }
 }
+
 @media (max-width: 828px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 256px;
   }
 }
+
 @media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
@@ -939,6 +1042,7 @@ nav .navB {
     max-width: 328px;
   }
 }
+
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -951,6 +1055,7 @@ nav .navB {
       flex-wrap: nowrap;
   margin-top: 48px;
 }
+
 #p-servicios #renovar .imagen .contenedorImagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -958,6 +1063,7 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
+
 #p-servicios #renovar .imagen .contenedorImagen img {
   max-width: 508px;
   width: 100%;
@@ -966,14 +1072,17 @@ nav .navB {
      object-fit: cover;
   padding: 10px;
 }
+
 #p-servicios #renovar .imagen .contenedorImagen :first-child {
   margin-top: 104px;
 }
+
 @media (max-width: 1052px) {
   #p-servicios #renovar .imagen .contenedorImagen img {
     max-width: 400px;
   }
 }
+
 @media (max-width: 828px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -982,6 +1091,7 @@ nav .navB {
     max-width: 352px;
   }
 }
+
 @media (max-width: 740px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -990,6 +1100,7 @@ nav .navB {
     max-width: 256px;
   }
 }
+
 @media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
@@ -1010,17 +1121,20 @@ nav .navB {
     max-width: 328px;
   }
 }
+
 #p-servicios #renovar .texto :first-child {
   font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
   margin: 102px 0 24px 0;
 }
+
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
 }
+
 @media (max-width: 828px) {
   #p-servicios #renovar .texto :last-child {
     font-size: 16px;
@@ -1040,26 +1154,31 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
+
 #p-nosotros #nosotros #landing h1 {
   margin-bottom: 20px;
   line-height: 4rem;
 }
+
 @media (max-width: 551px) {
   #p-nosotros #nosotros #landing h1 {
     line-height: 2.5rem;
   }
 }
+
 @media (max-width: 551px) {
   #p-nosotros #nosotros #landing h1 {
     line-height: 3.25rem;
   }
 }
+
 #p-nosotros #nosotros #landing img {
   margin: 20px 0;
   width: 90%;
   max-width: 1040px;
   height: auto;
 }
+
 #p-nosotros #nosotros #sobreNosotros {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1070,9 +1189,11 @@ nav .navB {
           flex-direction: column;
   margin-bottom: 72px;
 }
+
 #p-nosotros #nosotros #sobreNosotros h2 {
   margin: 150px 0 48px 0;
 }
+
 #p-nosotros #nosotros .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1085,26 +1206,31 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
+
 #p-nosotros #nosotros .container .video {
   width: 350px;
   height: auto;
 }
+
 @media (max-width: 551px) {
   #p-nosotros #nosotros .container .video {
     width: 300px;
   }
 }
+
 #p-nosotros #nosotros .container p {
   max-width: 420px;
   text-align: start;
   margin: 30px;
   font-size: 16px;
 }
+
 @media (max-width: 828px) {
   #p-nosotros #nosotros #sobreNosotros h2 {
     margin: 50px 0 24px 0;
   }
 }
+
 @media (max-width: 828px) and (max-width: 828px) {
   #p-nosotros #nosotros .container {
     -webkit-box-orient: vertical;
@@ -1201,6 +1327,7 @@ footer {
   height: 248px;
   font-size: 16px;
 }
+
 footer :first-child {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1210,15 +1337,18 @@ footer :first-child {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
 footer :first-child img {
   max-width: 76px;
   width: 100%;
   height: auto;
   margin-bottom: 9px;
 }
+
 footer :first-child p {
   line-height: 24px;
 }
+
 footer :nth-child(2) {
   font-size: 14px;
   display: -webkit-box;
@@ -1229,18 +1359,22 @@ footer :nth-child(2) {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
 footer :nth-child(2) a {
   text-decoration: none;
   color: #000;
   margin: 12px 0 12px 0;
 }
+
 footer :last-child p {
   margin-bottom: 9px;
 }
+
 footer :last-child :nth-child(2),
 footer :last-child :last-child {
   font-size: 14px;
 }
+
 @media (max-width: 828px) {
   footer {
     -webkit-box-orient: vertical;
@@ -1253,4 +1387,5 @@ footer :last-child :last-child {
     margin: 32px 0px 18px 31px;
     height: 504px;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
+/*# sourceMappingURL=styles.css.map */
