--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -655,6 +655,7 @@ nav {
     }
   }
   #renovar {
+    padding-bottom: 50px;
     @extend %flexContainer;
     .imagen {
       display: flex;
@@ -719,12 +720,11 @@ nav {
         font-family: "Playfair Display", serif;
         font-size: $headline4;
         font-weight: 700;
-        margin: 102px 0 24px 0;
+        margin: 80px 0 24px 0;
       }
       :last-child {
         font-size: $body1;
-        max-width: 508px;
-        margin-bottom: 120px;
+        max-width: 520px;
         @media (max-width: 828px) {
           font-size: $body3;
         }
