--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -84,17 +84,11 @@ body {
   & > * {
     margin: 15px 0;
   }
-}
-
-.g-contacto {
-  width: 100%;
-  @extend %flexContainer;
-  background: $bgCrema;
-  :first-child {
-    margin: 100px 0 11px 0;
-  }
-  :last-child {
-    margin: 35px 0 120px 0;
+  .wsp{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 15px;
   }
 }
 
