--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -123,21 +123,29 @@ body {
   margin: 15px 0;
 }
 
-.g-contacto {
-  width: 100%;
-  background: #F2ECDE;
+.g-coordinemos-container .wsp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.g-contacto :first-child {
-  margin: 100px 0 11px 0;
+.g-coordinemos-container .wsp :first-child {
+  margin-right: 15px;
 }
 
-.g-contacto :last-child {
-  margin: 35px 0 120px 0;
+.g-coordinemos-container .wsp :last-child {
+  font-size: 18px;
 }
 
 /**Mixins y extends**/
-.g-contacto, #introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-nosotros #nosotros, .proyecto .masProyectos {
+#introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-nosotros #nosotros, .proyecto .masProyectos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1045,6 +1053,10 @@ nav .navB {
   }
 }
 
+#p-servicios #renovar {
+  padding-bottom: 50px;
+}
+
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1128,13 +1140,12 @@ nav .navB {
   font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
-  margin: 102px 0 24px 0;
+  margin: 80px 0 24px 0;
 }
 
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
-  max-width: 508px;
-  margin-bottom: 120px;
+  max-width: 520px;
 }
 
 @media (max-width: 828px) {
@@ -1463,6 +1474,27 @@ body {
 
 .g-coordinemos-container > * {
   margin: 15px 0;
+}
+
+.g-coordinemos-container .wsp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.g-coordinemos-container .wsp :first-child {
+  margin-right: 15px;
+}
+
+.g-coordinemos-container .wsp :last-child {
+  font-size: 18px;
 }
 
 .proyecto {
