--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 15px;
+}
+
+.g-coordinemos-container .wsp :first-child {
+  margin-right: 15px;
+}
+
+.g-coordinemos-container .wsp :last-child {
+  font-size: 18px;
 }
 
 /**Mixins y extends**/
