--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -88,7 +88,12 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 15px;
+    :first-child{
+      margin-right: 15px;
+    }
+    :last-child{
+      font-size: $body1;
+    }
   }
 }
 
