--- a/css/styles.css
+++ b/css/styles.css
@@ -664,15 +664,20 @@ nav .navB {
 #proyectos h1 {
   margin-bottom: 48px;
 }
-#proyectos .textoPrincipal {
+#proyectos .textoPrincipal,
+#proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
   font-size: 18px;
 }
 @media (max-width: 828px) {
-  #proyectos .textoPrincipal {
+  #proyectos .textoPrincipal,
+#proyectos p {
     font-size: 16px;
   }
+}
+#proyectos .wsp p {
+  margin-bottom: 0;
 }
 #proyectos a {
   text-decoration: none;
