--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -499,12 +499,18 @@ nav {
   h1 {
     margin-bottom: 48px;
   }
-  .textoPrincipal {
+  .textoPrincipal,
+  p {
     max-width: 686px;
     margin-bottom: 48px;
     font-size: $body1;
     @media (max-width: 828px) {
       font-size: $body3;
+    }
+  }
+  .wsp {
+    p {
+      margin-bottom: 0;
     }
   }
   a {
