--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -97,6 +97,21 @@ body {
   }
 }
 
+.wsp {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0;
+  :first-child {
+    margin-right: 15px;
+    width: 32px !important;
+    height: auto !important;
+  }
+  :last-child {
+    font-size: $body1;
+  }
+}
+
 /**Mixins y extends**/
 
 %flexContainer {
